--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
 	"private": true,
 	"dependencies": {
 		"apollo-server-express": "^2.25.2",
+		"class-validator": "^0.13.1",
 		"express": "^4.17.1",
 		"graphql": "^15.5.1",
 		"reflect-metadata": "^0.1.13",
