--- a/web/package.json
+++ b/web/package.json
@@ -22,7 +22,8 @@
 		"graphql": "^15.5.1",
 		"next": "11.0.1",
 		"react": "17.0.2",
-		"react-dom": "17.0.2"
+		"react-dom": "17.0.2",
+		"react-google-login": "^5.2.2"
 	},
 	"devDependencies": {
 		"@types/react": "17.0.13",
