--- a/server/package.json
+++ b/server/package.json
@@ -17,15 +17,24 @@
 	},
 	"private": true,
 	"dependencies": {
+		"@typegoose/typegoose": "8.0.0-beta.21",
 		"apollo-server-express": "^2.25.2",
 		"class-validator": "^0.13.1",
+		"connect-mongo": "^4.4.1",
+		"dotenv-safe": "^8.2.0",
 		"express": "^4.17.1",
+		"express-session": "^1.17.2",
+		"google-auth-library": "^7.3.0",
 		"graphql": "^15.5.1",
+		"mongodb": "^3.6.10",
+		"mongoose": "^5.13.2",
 		"reflect-metadata": "^0.1.13",
 		"type-graphql": "^1.1.1"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.13",
+		"@types/express-session": "^1.17.4",
+		"@types/mongodb": "^3.6.20",
 		"@types/node": "^16.0.1",
 		"nodemon": "^2.0.9",
 		"typescript": "^4.3.5"
