--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
 		"apollo-server-express": "^2.25.2",
 		"class-validator": "^0.13.1",
 		"connect-mongo": "^4.4.1",
+		"cors": "^2.8.5",
 		"dotenv-safe": "^8.2.0",
 		"express": "^4.17.1",
 		"express-session": "^1.17.2",
@@ -35,7 +36,7 @@
 		"@types/express": "^4.17.13",
 		"@types/express-session": "^1.17.4",
 		"@types/mongodb": "^3.6.20",
-		"@types/node": "^16.0.1",
+		"@types/node": "^14.0.0",
 		"nodemon": "^2.0.9",
 		"typescript": "^4.3.5"
 	}
